# pulumi-examples

./: .gitignore  pyproject.toml
futures/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  _aws.py  _dependencies.py  _manipulation.py  _outputs.py  _resource_name.py  _transform.py
