[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Fabio Todaro <fbregist@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pulumi = "^3.0.0"
pulumi-aws = "^6"
pulumi-random = "^4.16.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
